Fix submission overflow

--- a/src/frontend/src/app/problem/code-editor/code-editor.component.scss
+++ b/src/frontend/src/app/problem/code-editor/code-editor.component.scss
@@ -1,8 +1,14 @@
 .editor {
-  height: 88vh;
+  height: 85vh;
 }
 
 .mat-flat-button {
   background-color: rgb(81, 191, 77);
   color: white;
+}
+
+.submission-row {
+  margin: 10px;
+  display: flex;
+  flex-direction: row-reverse;
 }
